# identity-exposure-lab

./: .env.example  README.md  pyproject.toml  requirements.txt
artifacts/reports/: identity_report.html  identity_report.json
sample_data/: ad_groups.csv  ad_users.csv  entra_export.json
src/identity_exposure/: __init__.py  analyzer.py  cli.py  models.py
src/identity_exposure/api/: __init__.py  main.py
src/identity_exposure/detection/: __init__.py  rules.py
src/identity_exposure/graph/: __init__.py  identity_graph.py
src/identity_exposure/ingest/: __init__.py  ad_csv.py  entra_json.py  loader.py
src/identity_exposure/reporting/: __init__.py  html.py  json_report.py
tests/: test_analyzer.py  test_api.py  test_detection.py  test_graph.py  test_ingest.py
